Revision history for DBIx-Class-Smooth

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [New Features]

 [Other Changes]

 [Requirements]

 [Stats & Dependency Changes]

 [Testing]

0.0104 2020-08-30T14:15:20Z UTC
 [Documentation]
 - Improvements to documentation.

 [Other Changes]
 - Tests improved.

 [Stats & Dependency Changes]
 - 42 files changed, 126 insertions(+), 86 deletions(-)
 - (dev req) ~ Dist::Zilla 6.012 --> 6.015
 - (dev sug) ~ Dist::Iller::Config::Author::CSSON 0.0324 --> 0.0325

0.0103 2020-05-31T19:15:33Z UTC
 [Documentation]
 - Documentation typos in ::ResultBase fixed

 [Stats & Dependency Changes]
 - 36 files changed, 38 insertions(+), 38 deletions(-)
 - (dev req) ~ Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional
   0.008 --> 0.009
 - (dev req) ~ Dist::Zilla::Plugin::CheckChangesHasContent 0.008 --> 0.011
 - (dev req) ~ Dist::Zilla::Plugin::Git 2.045 --> 2.046
 - (dev req) ~ Dist::Zilla::Plugin::Git::Contributors 0.034 --> 0.035
 - (dev req) ~ Dist::Zilla::Plugin::RunExtraTests 0.028 --> 0.029
 - (dev req) ~ Dist::Zilla::Plugin::Test::Compile 2.057 --> 2.058
 - (dev sug) ~ Dist::Iller::Config::Author::CSSON 0.0323 --> 0.0324

0.0102 2019-12-22T23:04:36Z UTC
 [Bug Fixes]
 - Removed a leftover Dumper debug statement. Thanks to MANWAR for the
   heads up.

 [Stats & Dependency Changes]
 - 36 files changed, 36 insertions(+), 40 deletions(-)
 - (dev sug) ~ Dist::Iller::Config::Author::CSSON 0.0322 --> 0.0323

0.0101 2018-11-29T21:20:16Z UTC
 - First public release

 [Stats & Dependency Changes]
 - 49 files changed, 1529 insertions(+), 121 deletions(-)
 - (run req) + Carp 1.38
 - (run req) + DBIx::Class (any)
 - (run req) + DBIx::Class::Candy (any)
 - (run req) + DBIx::Class::Helpers (any)
 - (run req) + List::SomeUtils (any)
 - (run req) + List::Util 1.45
 - (run req) + Module::Loader (any)
 - (run req) + Moo (any)
 - (run req) + Safe::Isa 1.000005
 - (run req) + Scalar::Util (any)