@@ -142,154 +142,156 @@
             "IO::Handle" : "0",
             "IPC::Open3" : "0",
             "Module::Load" : "0.26",
-            "Test::More" : "0.96"
+            "Test::DBIx::Class" : "0",
+            "Test::More" : "0.96",
+            "Test::mysqld" : "0"
          }
       }
    },
    "provides" : {
       "DBIx::Class::Smooth" : {
          "file" : "lib/DBIx/Class/Smooth.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Fields" : {
          "file" : "lib/DBIx/Class/Smooth/Fields.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::FilterItem" : {
          "file" : "lib/DBIx/Class/Smooth/FilterItem.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Flatten::DateTime" : {
          "file" : "lib/DBIx/Class/Smooth/Flatten/DateTime.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Helper::ResultSet::Shortcut::AddColumn" : {
          "file" : "lib/DBIx/Class/Smooth/Helper/ResultSet/Shortcut/AddColumn.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Helper::ResultSet::Shortcut::Join" : {
          "file" : "lib/DBIx/Class/Smooth/Helper/ResultSet/Shortcut/Join.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Helper::ResultSet::Shortcut::OrderByCollation" : {
          "file" : "lib/DBIx/Class/Smooth/Helper/ResultSet/Shortcut/OrderByCollation.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Helper::ResultSet::Shortcut::RemoveColumns" : {
          "file" : "lib/DBIx/Class/Smooth/Helper/ResultSet/Shortcut/RemoveColumns.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
-      "DBIx::Class::Smooth::Helper::Row::Creation" : {
-         "file" : "lib/DBIx/Class/Smooth/Helper/Row/Creation.pm",
-         "version" : "0.0104"
+      "DBIx::Class::Smooth::Helper::Row::Definition" : {
+         "file" : "lib/DBIx/Class/Smooth/Helper/Row/Definition.pm",
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Helper::Row::JoinTable" : {
          "file" : "lib/DBIx/Class/Smooth/Helper/Row/JoinTable.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Helper::Util" : {
          "file" : "lib/DBIx/Class/Smooth/Helper/Util.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime::datepart" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime/datepart.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime::day" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime/day.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime::hour" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime/hour.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime::minute" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime/minute.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime::month" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime/month.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime::second" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime/second.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::DateTime::year" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/DateTime/year.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators::gt" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators/gt.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators::gte" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators/gte.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators::in" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators/in.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators::like" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators/like.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators::lt" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators/lt.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators::lte" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators/lte.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Operators::not_in" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Operators/not_in.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::Util" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/Util.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::ident" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/ident.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Lookup::substring" : {
          "file" : "lib/DBIx/Class/Smooth/Lookup/substring.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Q" : {
          "file" : "lib/DBIx/Class/Smooth/Q.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Result" : {
          "file" : "lib/DBIx/Class/Smooth/Result.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::ResultBase" : {
          "file" : "lib/DBIx/Class/Smooth/ResultBase.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::ResultSet" : {
          "file" : "lib/DBIx/Class/Smooth/ResultSet.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::ResultSetBase" : {
          "file" : "lib/DBIx/Class/Smooth/ResultSetBase.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       },
       "DBIx::Class::Smooth::Schema" : {
          "file" : "lib/DBIx/Class/Smooth/Schema.pm",
-         "version" : "0.0104"
+         "version" : "0.0105"
       }
    },
    "release_status" : "stable",
@@ -304,7 +306,7 @@
          "web" : "https://github.com/Csson/p5-DBIx-Class-Smooth"
       }
    },
-   "version" : "0.0104",
+   "version" : "0.0105",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.020001"
@@ -787,7 +789,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "0.0104",
+                  "tag" : "0.0105",
                   "tag_format" : "%v",
                   "tag_message" : "Release %v%n%n%c"
                },
