@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2020-08-29 11:26:22 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2020-09-12 15:18:27 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0325
 
@@ -250,7 +250,9 @@ perl = 5.020000
 [Prereqs / TestRequires]
 DateTime = 1.05
 Module::Load = 0.26
+Test::DBIx::Class = 0
 Test::More = 0.96
+Test::mysqld = 0
 
 ; authordep Badge::Depot = 0.0103
 ; authordep Badge::Depot::Plugin::Coverage = 0
